Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -676,7 +676,7 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 
 ### 2. Understanding Subgraph in GraphQL
 ### (GraphQL in General, not only Hasura)
-(Hasura merupakan produk GraphQL, tetapi Produk GraphQL tidak hanya Hasura)
-(Penjelasan Konsep Subgraph tidak banyak dijelskan di Dokumentasi Hasura, sehingga kita perlu memahami konsep Subgraph pada GraphQL secara general)
+(Hasura merupakan produk GraphQL, tetapi Produk GraphQL tidak hanya Hasura) <br/>
+(Penjelasan Konsep Subgraph tidak banyak dijelaskan di Dokumentasi Hasura, sehingga kita perlu memahami konsep Subgraph pada GraphQL secara general)
 
 >> penjelasan ini diluar Dokumentasi Hasura
