Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -648,7 +648,7 @@ artinya, saat terdapat perubahan pada Database, aplikasi kita akan secara otomat
 >>
 --------
 
-## B. Subgraphs
+# B. Subgraphs
 
  -> Subgraph merupakan semua Metadata yang dibutuhkan untuk bertindak sebagai Self-Contained Entity (Entitas Mandiri) yang dapat dibuat, dimiliki, dipelihara, dan dibangun secara independen oleh Team Individu, untuk kemudian menjadi bagian yang saling terhubung dari Unified API
 
@@ -660,8 +660,8 @@ komponen-komponen ini bekerja sama dengan aman untuk mengatasi hambatan tradisio
 Pendekatan Integrasi ini menyederhanakan pengembangan Aplikasi antar System Data, 
 memungkinkan Iterasi yang lebih cepat dan Maintenance yang lebih cepat oleh Team Engineer.
 
-### 1. How Do I Build a Subgraph ?
-### (Bagaimana cara membuat Subgraph)
+## 1. How Do I Build a Subgraph ?
+## (Bagaimana cara membuat Subgraph)
 
 -> Subgraph tersusun dari Data Source terkait, baik sebagai Traditional Database, atau sebagai Custome Business Logic.
 Dan Subgraph terkoneksi (connected) ke Data Layer menggunakan Data Connector.
@@ -674,9 +674,17 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 
 -> Setelah menghubungkan Data Source , Anda kemudian dapat membuat metadata Anda menggunakan Hasura CLI dan ekstensi Hasura VS Code. Metadata ini kemudian dibangun pada Hasura DDN Instance Anda, yang digunakan untuk serve GraphQL API Anda.
 
-### 2. Understanding Subgraph in GraphQL
-### (GraphQL in General, not only Hasura)
+## 2. Understanding Subgraph in GraphQL
+## (GraphQL in General, not only Hasura)
 (Hasura merupakan produk GraphQL, tetapi Produk GraphQL tidak hanya Hasura) <br/>
 (Penjelasan Konsep Subgraph tidak banyak dijelaskan di Dokumentasi Hasura, sehingga kita perlu memahami konsep Subgraph pada GraphQL secara general)
 
 >> penjelasan ini diluar Dokumentasi Hasura
+
+- Pada GraphQL, Subgraph merupakan komponen yang digunakan untuk memecah dan mengatur Data Kompleks menjadi bagian-bagian yang lebih kecil dan mudah dikelola, yang bertujuan untuk memudahkan Query & memudahkan Data Retrieval (Pengambilan Data).
+
+- Subgraph memainkan Peran Penting dalam membuat Data Modular, Distributed (terdistribusi), dan Scalable.
+
+### 2.1) What is Subgraph in GraphQL
+
+
