Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -687,4 +687,9 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 
 ### 2.1) What is Subgraph in GraphQL
 
+- Pada System GraphQL, "Subgraph" merupakan bagian yang lebih kecil dari GraphQL Schema yang lebih besar.
 
+- Saat kita mempunyai System yang besar, daripada mempunyai Satu Schema yang besar dan Complex, kita dapat membaginya menjadi beberapa Subgraph yang lebih kecil.
+
+>> ^For your information^
+>> {1} **GraphQL Schema** :
