Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -696,5 +696,18 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 >> GraphQL Schema itu seperti Blueprint untuk GraphQL API, <br/>
 >> yakni mendefinisikan Types of Data (jenis data) yang dapat anda gunakan, bagaimana berbagai Type of Data (berbagai Jenis Data) saling terkait antara satu sama lain, dan >> Operations yang dapat anda lakukan. <br/>
 >> istilahnya, GraphQL Schema itu seperti Kontrak antara Client & Server yang memberitahu Client data apa yang dapat diminta oleh Client.
->>
->> 
+
+- Subgraph berfokus pada Domain atau Area tertentu. <br/>
+misalnya, pada System E-Commerce, kita mungkin memiliki : <br/>
+<br/>
+(1) Users Subgraph :<br/>
+Subgraph ini mengelola User Information,<br/>
+seperti Profiles, Addresses, dan Data Login<br/>
+<br/>
+(2) Products Subgraph : <br/>
+Menangani Product Listing (Daftar Produk), Product Category, dan Product Inventory.<br/>
+<br/>
+(3) Orders Subgraph :<br/>
+Menangani Order Creation (Pembuatan Pesanan), Order Tracking (Pelacakan Pesanan) , dan Order Payments (Pembayaran Pesanan).<br/>
+
+
