Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -707,4 +707,7 @@ Menangani Product Listing (Daftar Produk), Product Category, dan Product Invento
 (3) Orders Subgraph :<br/>
 Menangani Order Creation (Pembuatan Pesanan), Order Tracking (Pelacakan Pesanan) , dan Order Payments (Pembayaran Pesanan).<br/>
 
+ 
+ ### 2.2) Why user Subgraphs in GraphQL ?
+### (Kenapa menggunakan Subgraph pada GraphQL ?)
 
