Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -701,7 +701,7 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 misalnya, pada System E-Commerce, kita mungkin memiliki : <br/>
 (1) Users Subgraph :<br/>
 Subgraph ini mengelola User Information,<br/>
-seperti Profiles, Addresses, dan Data Login<br/>
+seperti Profiles, Addresses, dan Data Login <br/>
 (2) Products Subgraph : <br/>
 Menangani Product Listing (Daftar Produk), Product Category, dan Product Inventory.<br/>
 (3) Orders Subgraph :<br/>
@@ -709,5 +709,7 @@ Menangani Order Creation (Pembuatan Pesanan), Order Tracking (Pelacakan Pesanan)
 
  
  ### 2.2) Why user Subgraphs in GraphQL ?
-### (Kenapa menggunakan Subgraph pada GraphQL ?)
-
+### (Kenapa menggunakan Subgraph pada GraphQL ?) <br/>
+<br/>
+[1] Modular Structure : <br/>
+Membagi Large System (Sistem yang besar) menjadi Subgraph membuatnya "Modular", yang mana ini berarti setiap Subgraph menangani area atau domain nya sendiri, yang mana hal ini Menyederhanakan keseluruhan arsitektur. <br/>
