Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -713,9 +713,9 @@ Menangani Order Creation (Pembuatan Pesanan), Order Tracking (Pelacakan Pesanan)
 <br/>
 [1] Modular Structure : <br/>
 Membagi Large System (Sistem yang besar) menjadi Subgraph membuatnya "Modular", yang mana ini berarti setiap Subgraph menangani area atau domain nya sendiri, yang mana hal ini Menyederhanakan keseluruhan arsitektur. <br/>
-
->> ^For your information^
->> {1} **Modular** :
+  <br/>
+>> ^For your information^  <br/>
+>> {1} **Modular** :  <br/>
 >> Modular merupakan pendekatan desain dimana System atau Software dibagi menjadi Komponen atau Modul yang terpisah.  <br/>
 >> yang mana setiap Modul menjalankan fungsi tertentu dan dapat beroperasi secara independen, sehingga memungkinkan Update, Maintenance, dan Skalability.  <br/>
 >> Modularity (modularitas) ini memungkinkan Developer untuk menambah atau mengganti Komponen tanpa mempengaruhi Seluruh System,  <br/>
