--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -721,3 +721,13 @@ Membagi Large System (Sistem yang besar) menjadi Subgraph membuatnya "Modular", 
 >> yang mana setiap Modul menjalankan fungsi tertentu dan dapat beroperasi secara independen, sehingga memungkinkan Update, Maintenance, dan Skalability.  <br/>
 >> Modularity (modularitas) ini memungkinkan Developer untuk menambah atau mengganti Komponen tanpa mempengaruhi Seluruh System,  <br/>
 >> sehingga hal ini dapat meningkatkan Fleksibilitas & Efisiensi dalan Software Development dan Software Architecture.  <br/>
+<br/>
+[2] Better Performance : <br/>
+Setiap Subgraph hanya menangani bagian tertentu (specific part) dari System, <br/>
+yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity, kita hanya meng-query Data yang kita butuhkan, tanpa harus membebani 'a single Large Schema' (tanpa harus membebani keseluruhan Skema)
+
+>> 
+>>
+>> 
+
+
