--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -724,7 +724,7 @@ Membagi Large System (Sistem yang besar) menjadi Subgraph membuatnya "Modular", 
 <br/>
 [2] Better Performance : <br/>
 Setiap Subgraph hanya menangani bagian tertentu (specific part) dari System, <br/>
-yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity, kita hanya meng-query Data yang kita butuhkan, tanpa harus membebani 'a single Large Schema' (tanpa harus membebani keseluruhan Skema)
+yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity kita hanya meng-query Data yang kita butuhkan, tanpa harus membebani tanpa harus membebani keseluruhan Skema.
 
 >> 
 >>
