--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -726,7 +726,8 @@ Membagi Large System (Sistem yang besar) menjadi Subgraph membuatnya "Modular", 
 Setiap Subgraph hanya menangani bagian tertentu (specific part) dari System, <br/>
 yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity kita hanya meng-query Data yang kita butuhkan, tanpa harus membebani tanpa harus membebani keseluruhan Skema.
 
->> 
+>> ^For your information^
+>> {1} **How Modularization in Subgraph can increase performance in GraphQL**
 >>
 >> 
 
