--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -727,8 +727,15 @@ Setiap Subgraph hanya menangani bagian tertentu (specific part) dari System, <br
 yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity kita hanya meng-query Data yang kita butuhkan, tanpa harus membebani tanpa harus membebani keseluruhan Skema.
 
 >> ^For your information^  <br/>
->> {1} **How Modularization in Subgraph can increase performance in GraphQL**
->>
+>> {1} **How Modularization in Subgraph can increase performance in GraphQL**  <br/>
+>> 
+>> - "Modularization" berarti memecah sesuatu menjadi bagian yang lebih kecil dan independen (atau bisa kita sebut Modul-Modul) 
+>> yang dapat beroperasi secara terpisah. <br/>
+>> Dalam konteks GraphQL, Subgraph adalah bagian-bagian yang lebih kecil ini, <br/>
+>> yang mana masing-masing bagian ini bertanggung jawab untuk Area Fungsionalitas tertentu atau Data tertentu,  <br/>
+>> yaitu seperti Users, Products, atau Orders.  <br/>
+
+ 
 >> 
 
 
