Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -728,6 +728,7 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 
 >> ^For your information^  <br/>
 >> {1} **How Modularization in Subgraph can increase performance in GraphQL**  <br/>
+>> **(Bagaimana Modularization pada Subgraph dapat meningkatkan Performance pada GraphQL)**  <br/> 
 >> 
 >> - "Modularization" berarti memecah sesuatu menjadi bagian yang lebih kecil dan independen (atau bisa kita sebut Modul-Modul) 
 >> yang dapat beroperasi secara terpisah. <br/>
