Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -730,12 +730,21 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> {1} **How Modularization in Subgraph can increase performance in GraphQL**  <br/>
 >> **(Bagaimana Modularization pada Subgraph dapat meningkatkan Performance pada GraphQL)**  <br/> 
 >> 
->> - "Modularization" berarti memecah sesuatu menjadi bagian yang lebih kecil dan independen (atau bisa kita sebut Modul-Modul) 
+>> ->  "Modularization" berarti memecah sesuatu menjadi bagian yang lebih kecil dan independen (atau bisa kita sebut Modul-Modul) 
 >> yang dapat beroperasi secara terpisah. <br/>
 >> Dalam konteks GraphQL, Subgraph adalah bagian-bagian yang lebih kecil ini, <br/>
 >> yang mana masing-masing bagian ini bertanggung jawab untuk Area Fungsionalitas tertentu atau Data tertentu,  <br/>
 >> yaitu seperti Users, Products, atau Orders.  <br/>
-
+>>  <br/>
+>>   -> Bagaimana Modularization meningkatkan Performance : <br/>
+>> <br/>
+>> (1) Focused Queries : <br/>
+>> 
+>> - Arti "Focused Queries" : <br/>
+>> Saat Client (seperti WebApp) menginginkan Data, Client mengrimkan Request berupa Query, yang mana Query tersebut hanya berisi Relevant Subgraph (Subgraph yang berkaitan >> dengan Data yang kita minta). <br/>
+>> Misalnya jika Client meminta data "User Details", maka Query tersebut hanya berisi Subgraph User.
+>> 
+>> - 
  
 >> 
 
