Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -742,9 +742,13 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> 
 >> - Arti "Focused Queries" : <br/>
 >> Saat Client (seperti WebApp) menginginkan Data, Client mengrimkan Request berupa Query, yang mana Query tersebut hanya berisi Relevant Subgraph (Subgraph yang berkaitan >> dengan Data yang kita minta). <br/>
->> Misalnya jika Client meminta data "User Details", maka Query tersebut hanya berisi Subgraph User.
+>> Misalnya jika Client meminta data "User Details", maka Query tersebut hanya berisi Subgraph User.  <br/>  <br/>
 >> 
->> - 
+>> -  Performance Benefit :  <br/>
+>> cara "Focused Queries" dapat mengurangi jumlah Data yang Server harus Proses dan kembalikan.  <br/>
+>> yang mana, Jumlah Data yang lebih sedikit, berarti Response yang lebih cepat.  <br/>
+>>
+>> 
  
 >> 
 
