Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -747,9 +747,29 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> -  Performance Benefit :  <br/>
 >> cara "Focused Queries" dapat mengurangi jumlah Data yang Server harus Proses dan kembalikan.  <br/>
 >> yang mana, Jumlah Data yang lebih sedikit, berarti Response yang lebih cepat.  <br/>
->>
+>>  <br/>
+>> (2) Optimized Data Fetching :  <br/>
+>>  <br/>
+>> - Setiap Subgraph dapat Fetch Data (Mengambil Data) dengan cara yang paling efisien untuk Domain (area) tertentu.  <br/>
+>> yang mana hal ini menghasilkan Data Retrieval (Pengambilan Data) yang lebih cepat, karena setiap Subgraph sudah mengetahui harus mengambil dimana datanya.  <br/>  <br/>
 >> 
- 
->> 
+>> - Misalnya, terdapat Sebuah Database PostgreSQL yang menyimpan Data kita,  <br/>
+>> dan kita mempunyai beberapa Subgraph yang dipisah-pisah, dan masing-masing mempunyai peran yang berbeda-beda.  <br/>
+>> contoh, beberapa Subgraph yang kita punya adalah :  <br/>
+>> (1) User Subgraph :  <br/>
+>> berperan mengelola Data User  <br/>
+>> (2) Order Subgraph :  <br/>
+>> berperan mengelola Data Pesanan (Data Order)  <br/>
+>> (3) Product Subgraph :  <br/>
+>> berperan mengelola Data Product  <br/>
+>>  <br/>
+>> Karena setiap Subgraph sudah mempunyai peranannya masing-masing, sehingga setiap Subgraph sudah mengetahui dimana harus meng-akses data yang diperlukan.  <br/>
+>> Sehingga hal ini dapat mempercepat pengambilan data (Faster Data Retrieval).  <br/>
+>>  <br/>
+>> Istilahnya, jika kita mempunyai "Rak Buku" dan kita sudah mengatur penempatan Kategori buku yang ada di Rak tersebut, maka jika kita mencari buku dapat jadi lebih cepat. >>  <br/>
+>> Misalnya, pada Rak Buku, laci paling atas (Nomor 1) merupakan tempat kita menyimpan buku kategori "Anak-anak",  <br/>
+>> dan pada laci nomor 2, merupakan tempat kita menyimpan buku kategori "Science-Fiction".  <br/>
+>> Sehingga jika kita ingin mencari buku kategori anak-anak, kita sudah tahu harus mencari di laci nomor 1.  <br/>
+>> (hal ini dapat menghemat waktu, karena kita tidak harus mencari di seluruh Laci pada Rak Buku).   <br/>
 
 
