Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -771,5 +771,16 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> dan pada laci nomor 2, merupakan tempat kita menyimpan buku kategori "Science-Fiction".  <br/>
 >> Sehingga jika kita ingin mencari buku kategori anak-anak, kita sudah tahu harus mencari di laci nomor 1.  <br/>
 >> (hal ini dapat menghemat waktu, karena kita tidak harus mencari di seluruh Laci pada Rak Buku).   <br/>
+>>  <br/>
+>> (3) Independent Scalling :  <br/>
+>>  
+>>  - Secara umum, Scalling berarti meningkatkan jumlah Resources (seperti Server, Aplikasi, atau Database) yang digunakan System sehingga bisa menangani Workload (beban >> >> kerja) atau Traffic.  <br/>
+>> 
+>> - Setiap Subgraph dapat dapat dilakukan Scalling secara Independen berdasarkan penggunaannya.  <br/>
+>> yang mana,  jika Area tertentu mendapatkan banyak Traffic, maka Subgraph yang dikhususkan untuk area tersebut tanpa ditingkatkan (Scale-Up) tanpa mempengaruhi yang lain.<br/>
+>> 
+>> - Contoh Independent Scalling :  <br/>
+>> Jika Area Order (Pesanan) mendapatkan Traffic yang tinggi, maka "Order Subgraph" (Subgraph Pesanan) dapat ditingkatkan (Scale-Up) tanpa mempengaruhi Subgraph yang lain.  >> <br/>
+
 
 
