Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -774,7 +774,7 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >>  <br/>
 >> (3) Independent Scalling :  <br/>
 >>  
->>  - Secara umum, Scalling berarti meningkatkan jumlah Resources (seperti Server, Aplikasi, atau Database) yang digunakan System sehingga bisa menangani Workload (beban >> >> kerja) atau Traffic.  <br/>
+>>  - Secara umum, Scalling berarti meningkatkan jumlah Resources (seperti Server, Aplikasi, atau Database) yang digunakan System sehingga bisa menangani Workload (beban kerja) atau Traffic.  <br/>
 >> 
 >> - Setiap Subgraph dapat dapat dilakukan Scalling secara Independen berdasarkan penggunaannya.  <br/>
 >> yang mana,  jika Area tertentu mendapatkan banyak Traffic, maka Subgraph yang dikhususkan untuk area tersebut tanpa ditingkatkan (Scale-Up) tanpa mempengaruhi yang lain.<br/>
