Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -781,6 +781,21 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> 
 >> - Contoh Independent Scalling :  <br/>
 >> Jika Area Order (Pesanan) mendapatkan Traffic yang tinggi, maka "Order Subgraph" (Subgraph Pesanan) dapat ditingkatkan (Scale-Up) tanpa mempengaruhi Subgraph yang lain.  >> <br/>
+>>  <br/>
+>> (4) Paralel Processing :  <br/>
+>> 
+>> - Saat Client mengirim Query yang memerlukkan Data dari "Multiple Subgraphs" (beberapa Subgraph), <br/>
+>> Multiple Subgraph tersebut dapat memproses Request dalam waktu yang sama (secara Paralel). <br/>
+>>  <br/>
+>> (Paralel Processing = Beberapa Subgraph dapat memproses Request dalam waktu yang sama).  <br/>
+>> 
+>> - Performance Benefit :  <br/>
+>> Paralel Processing mengurangi waktu yang dibutuhkan untuk mendapatkan Response karena Multiple Operations (beberapa operasi) dapat terjadi dalam waktu yang sama (Simultaneously).  <br/>
+>> 
+>> - Contoh nya :  <br/>
+>> Jika Client  menginginkan "User Information" dan "Order History",  <br/>
+>> maka "User Subgraph" & "Order Subgraph" dapat bekerja secara serentak (pada waktu yang sama),  <br/>
+>> yang mana hal ini mempercepat Response secara keseluruhan.  <br/>
 
 
 
