Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -796,6 +796,16 @@ yang mana ini dapat meningkatkan Performance (kinerja) karena dengan Modularity 
 >> Jika Client  menginginkan "User Information" dan "Order History",  <br/>
 >> maka "User Subgraph" & "Order Subgraph" dapat bekerja secara serentak (pada waktu yang sama),  <br/>
 >> yang mana hal ini mempercepat Response secara keseluruhan.  <br/>
-
+>>  <br/>
+>> [5] Reduced Network Overhead :  <br/>
+>> 
+>> - Karena Clients hanya Request Data dari Subgraph yang diperlukan,   <br/>
+>> sehingga lebih sedikit data yang dikirim melalui Jaringan.  <br/>
+>> yang mana hal ini, dapat menghasilkan Load Time yang lebih cepat, dan mengurangi Pemakaian Bandwith.  <br/>
+>> 
+>> - Contoh :  <br/>
+>> Jika User hanya membutuhkan "informasi User",  <br/>
+>> maka pada Query, User hanya menulis "User Subgraph" (dan User tidak perlu menulis Subgraph untuk selain User ),  <br/>
+>> sehingga kita dapat menghindari Data Transfer yang tidak perlu.  <br/>
 
 
