Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -694,7 +694,7 @@ Subgraph ini bahkan dapat menyertakan Custom Business Logic Anda sendiri sebagai
 >> ^For your information^  <br/>
 >> {1} **GraphQL Schema** : <br/>
 >> GraphQL Schema itu seperti Blueprint untuk GraphQL API, <br/>
->> yakni mendefinisikan Types of Data (jenis data) yang dapat anda gunakan, bagaimana berbagai Type of Data (berbagai Jenis Data) saling terkait antara satu sama lain, dan >> Operations yang dapat anda lakukan. <br/>
+>> yakni mendefinisikan Types of Data (jenis data) yang dapat anda gunakan, bagaimana berbagai Type of Data (berbagai Jenis Data) saling terkait antara satu sama lain, dan Operations yang dapat anda lakukan. <br/>
 >> istilahnya, GraphQL Schema itu seperti Kontrak antara Client & Server yang memberitahu Client data apa yang dapat diminta oleh Client.
 
 - Subgraph berfokus pada Domain atau Area tertentu. <br/>
