Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -850,4 +850,7 @@ yang mana hal ini dapat mempercepat Development Process (Proses Pengembangan). <
 Misalnya, jika terdapat masalah pada "Order Subgraph", maka masalah tersebut tidak langsung mempengaruhi "User Subgraph".  <br/>
 (secara umum, Isolated memiliki arti yaitu System, Process, atau Component yang dipisahkan dari yang lain)  <br/>
 
-
+<br/>
+[4] Federation : <br/>
+Subgraph sangat berguna pada "Federated GraphQL Architecture". <br/>
+Pada Federated System, Multiple Subgraph (beberapa Subgraph) bekerja sama dibawah 'Unified Schema'. <br/>
