Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -855,3 +855,8 @@ Misalnya, jika terdapat masalah pada "Order Subgraph", maka masalah tersebut tid
 [4] Federation : <br/>
 Subgraph sangat berguna pada "Federated GraphQL Architecture". <br/>
 Pada Federated System, Multiple Subgraph (beberapa Subgraph) bekerja sama dibawah 'Unified Schema'. <br/>
+
+
+### 2.3) How Do Subgraphs Work in GraphQL Federation ? 
+### (Bagaimana Subgraph bekerja pada GraphQL Federation)
+
