Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -863,3 +863,10 @@ Pada Federated System, Multiple Subgraph (beberapa Subgraph) bekerja sama dibawa
 ### 2.3) How Do Subgraphs Work in GraphQL Federation ? 
 ### (Bagaimana Subgraph bekerja pada GraphQL Federation)
 
+- pada GraphQL Federation, kita memiliki Multiple Subgraphs (beberapa Subgraph) yang bekerja bersama untuk membuat 'Unified API'. <br/>
+
+>> ^For your information^ <br/>
+>> **Unified API** : <br/>
+>> "Unified API" menggabungkan API untuk semua layanan menjadi satu, yang mana berarti kita hanya perlu menggunakan Satu API untuk banyak layanan. <br/>
+>> Daripada memiliki API terpisah untuk setiap layanan (seperti satu API untuk Sistem Pembayaran, Satu API lainnya untuk Social Media, dan Satu API lagi untuk Data Storage),<br/>
+>> Unified API menggabungkan semua layanan tersebut menjadi satu.<br/>
