Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -869,4 +869,9 @@ Pada Federated System, Multiple Subgraph (beberapa Subgraph) bekerja sama dibawa
 >> **Unified API** : <br/>
 >> "Unified API" menggabungkan API untuk semua layanan menjadi satu, yang mana berarti kita hanya perlu menggunakan Satu API untuk banyak layanan. <br/>
 >> Daripada memiliki API terpisah untuk setiap layanan (seperti satu API untuk Sistem Pembayaran, Satu API lainnya untuk Social Media, dan Satu API lagi untuk Data Storage),<br/>
->> Unified API menggabungkan semua layanan tersebut menjadi satu.<br/>
+>> Unified API menggabungkan semua layanan tersebut menjadi satu. <br/>
+
+- Subgraphs dihubungkan oleh "Gateway" yang bertindak sebagai "Middle Layer" (Lapisan Tengah). <br/>
+Gateway menggabungkan  Semua Subgraph (banyak Subgraph) menjadi satu skema (Single Schema) yang dapat di-Query oleh Client. <br/>
+<br/>
+Gateway berfungsi seperti "Central Hub" atau "Entry Point" (titik masuk) yang menggabungkan Semua Subgraph menjadi satu. <br/>
