Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -874,4 +874,23 @@ Pada Federated System, Multiple Subgraph (beberapa Subgraph) bekerja sama dibawa
 - Subgraphs dihubungkan oleh "Gateway" yang bertindak sebagai "Middle Layer" (Lapisan Tengah). <br/>
 Gateway menggabungkan  Semua Subgraph (banyak Subgraph) menjadi satu skema (Single Schema) yang dapat di-Query oleh Client. <br/>
 <br/>
-Gateway berfungsi seperti "Central Hub" atau "Entry Point" (titik masuk) yang menggabungkan Semua Subgraph menjadi satu. <br/>
+Gateway berfungsi seperti "Central Hub" atau "Entry Point" (titik masuk) yang menggabungkan Semua Subgraph menjadi satu. <br/> <br/>
+
+- Begini Cara Kerjanya : <br/>
+<br/>
+(1) Subgraph Definition : <br/>
+Setiap Subgraph mendefinisikan jenis (Type), Query, dan Mutasi nya sendiri. <br/>
+Misalnya, "Product Subgraph" memiliki jenis seperti 'Produk', 'Category', dan 'Inventaris'. <br/>
+dan juga "Payment Subgraph" memiliki Jenis yang berbeda dari "Product Subgraph". <br/>
+Jenis pada "Payment Subgraph" diantaranya adalah 'Saldo uang' dan 'Payment Method'. <br/>
+<br/> 
+(2) Reference Between Subgraphs : <br/>
+Subgraph dapat mereferensikan Data dari Subgraph lainnya. <br/>
+contohnya : <br/>
+"Order Subgraph" dapat merujuk data 'Product Types' dari "Product Subgraph" untuk menyertakan Detail Product pada Order (Pesanan). <br/>
+<br/>
+(3) Gateway : <br/>
+Gateway menggabungkan Semua Subgraph dan menangani Query dari Client. <br/>
+Saat Client membuat Query, Gateway membagi Query (splits the query) dan membaginya ke Subgraph yang sesuai (appropriate Subgraph). <br/>
+Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (Single Response) untuk Client. <br/>
+<br/>
