Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -878,18 +878,18 @@ Gateway berfungsi seperti "Central Hub" atau "Entry Point" (titik masuk) yang me
 
 - Begini Cara Kerjanya : <br/>
 <br/>
-(1) **Subgraph Definition** : <br/>
+(1) Subgraph Definition : <br/>
 Setiap Subgraph mendefinisikan jenis (Type), Query, dan Mutasi nya sendiri. <br/>
 Misalnya, "Product Subgraph" memiliki jenis seperti 'Produk', 'Category', dan 'Inventaris'. <br/>
 dan juga "Payment Subgraph" memiliki Jenis yang berbeda dari "Product Subgraph". <br/>
 Jenis pada "Payment Subgraph" diantaranya adalah 'Saldo uang' dan 'Payment Method'. <br/>
-
-(2) **Reference Between Subgraphs** : <br/>
+<br/>
+(2) Reference Between Subgraphs : <br/>
 Subgraph dapat mereferensikan Data dari Subgraph lainnya. <br/>
 contohnya : <br/>
 "Order Subgraph" dapat merujuk data 'Product Types' dari "Product Subgraph" untuk menyertakan Detail Product pada Order (Pesanan). <br/>
-
-(3) **Gateway** : <br/>
+<br/>
+(3) Gateway : <br/>
 Gateway menggabungkan Semua Subgraph dan menangani Query dari Client. <br/>
 Saat Client membuat Query, Gateway membagi Query (splits the query) dan membaginya ke Subgraph yang sesuai (appropriate Subgraph). <br/>
 Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (Single Response) untuk Client. <br/>
