--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -895,3 +895,7 @@ Saat Client membuat Query, Gateway membagi Query (splits the query) dan membagin
 Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (Single Response) untuk Client. <br/>
 <br/>
 <br/>
+<br/>
+### 2.4) Example : How Do Subgraphs Work in GraphQL Federation 
+### (Contoh : Cara Kerja Subgraph pada GraphQL Federation)
+<br/>
