Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -892,10 +892,10 @@ contohnya : <br/>
 (3) Gateway : <br/>
 Gateway menggabungkan Semua Subgraph dan menangani Query dari Client. <br/>
 Saat Client membuat Query, Gateway membagi Query (splits the query) dan membaginya ke Subgraph yang sesuai (appropriate Subgraph). <br/>
-Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (Single Response) untuk Client. <br/>
-<br/>
-<br/>
-<br/>
+Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (Single Response) untuk Client. <br/> <br/>
+
+
+
 ### 2.4) Example : How Do Subgraphs Work in GraphQL Federation 
 ### (Contoh : Cara Kerja Subgraph pada GraphQL Federation)
-<br/>
+
