Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -896,6 +896,20 @@ Response dari banyak Subgraph ini, kemudian digabungkan menjadi Satu Response (S
 
 
 
-### 2.4) Example : How Do Subgraphs Work in GraphQL Federation 
-### (Contoh : Cara Kerja Subgraph pada GraphQL Federation)
+### 2.4) Example : How Do Subgraphs Work in GraphQL Federation   <br/>
+### (Contoh : Cara Kerja Subgraph pada GraphQL Federation)  <br/>  <br/>
 
+- Bayangkan kita mempunyai Tiga Subgraph :  <br/>
+
+(1) Users Subgraph :  <br/>
+mengelola 'User Profile' dan 'Login Information'.  <br/>
+ <br/>
+(2) Products Subgraph :  <br/>
+mengelola 'Product Listings' dan 'Inventory'. <br/>
+ <br/>
+(3) Order Subgraph : <br/>
+Mengelola 'User Order', termasuk 'Payment' dan 'Shipping Details'. <br/>  <br/>
+
+
+- "Gateway" menyatukan Semua Subgraph menjadi Satu.  <br/>
+sehingga Client dapat meng-Query banyak Subgraph dalam Satu Request.  <br/>
