Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -912,4 +912,28 @@ Mengelola 'User Order', termasuk 'Payment' dan 'Shipping Details'. <br/>  <br/>
 
 
 - "Gateway" menyatukan Semua Subgraph menjadi Satu.  <br/>
-sehingga Client dapat meng-Query banyak Subgraph dalam Satu Request.  <br/>
+sehingga Client dapat meng-Query banyak Subgraph dalam Satu Request.  <br/> <br/>
+
+- - Client's Query (Federated GraphQL) : <br/>
+contoh Query yang ditulis oleh Client (User) untuk request Data :
+
+'''
+query {
+  user(id: 123) {
+    id
+    name
+    orders {
+      id
+      total
+      products {
+        id
+        name
+        price
+      }
+    }
+  }
+}
+
+'''
+
+ 
