Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -935,5 +935,32 @@ query {
 }
 
 ```
-
  
+-> Query yang dituliskan User diatas, terdiri dari beberapa Subgraph,
+yang kalau dijabarkan seperti ini :  <br/>  <br/>
+
+(1) User Subgraph :  <br/>
+Berikut ini adalah bagian Query yang berisikan "User Subgraph"  <br/>
+```
+user(id: 123) {
+    id
+    name
+```
+ <br/>
+(2) Orders Subgraph :  <br/>
+Berikut ini adalah bagian Query yang berisikan "Orders Subgraph"   <br/>
+```
+orders {
+      id
+      total
+```
+ <br/>  
+(3) Products Subgraph :  <br/>
+Berikut ini adalah bagian Query yang berisikan "Products Subgraph"  <br/>
+```
+products {
+        id
+        name
+        price
+```
+ <br/>
