Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -940,23 +940,25 @@ query {
 yang kalau dijabarkan seperti ini :  <br/>  <br/>
 
 (1) User Subgraph :  <br/>
-Berikut ini adalah bagian Query yang berisikan "User Subgraph"  <br/>
+Berikut ini adalah bagian Query yang berisikan "User Subgraph"  
 ```
 user(id: 123) {
     id
     name
 ```
  <br/>
+ 
 (2) Orders Subgraph :  <br/>
-Berikut ini adalah bagian Query yang berisikan "Orders Subgraph"   <br/>
+Berikut ini adalah bagian Query yang berisikan "Orders Subgraph"  
 ```
 orders {
       id
       total
 ```
+
  <br/>  
 (3) Products Subgraph :  <br/>
-Berikut ini adalah bagian Query yang berisikan "Products Subgraph"  <br/>
+Berikut ini adalah bagian Query yang berisikan "Products Subgraph"  
 ```
 products {
         id
