Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -969,3 +969,14 @@ products {
       }
 ```
 
+ <br/> 
+  <br/> 
+-> Cara kerjanya :  <br/> 
+ <br/> 
+(1) User's Data :
+Gateway memberi Rute Query 'id' & 'name' untuk pergi ke "User Subgraph" 
+```
+user(id: 123) {
+    id
+    name
+```
