Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -981,3 +981,10 @@ Gateway memberi Rute Query 'id' & 'name' untuk pergi ke "User Subgraph"
 	    id
 	    name
 
+<br/> 
+(2) Order Data : <br/>
+Gateway memberi Rute Query 'Bagian Order' untuk pergi ke "Order Subgraph" 
+
+	orders {
+		id
+		total
