Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -974,7 +974,7 @@ products {
 -> Cara kerjanya :  <br/> 
  <br/> 
 (1) User's Data :
-Gateway memberi Rute Query 'id' & 'name' untuk pergi ke "User Subgraph" 
+Gateway memberi Rute untuk Query 'id' & 'name' untuk pergi ke "User Subgraph" 
 
 	
 	user(id: 123) {
@@ -983,8 +983,18 @@ Gateway memberi Rute Query 'id' & 'name' untuk pergi ke "User Subgraph"
 
 <br/> 
 (2) Order Data : <br/>
-Gateway memberi Rute Query 'Bagian Order' untuk pergi ke "Order Subgraph" 
+Gateway memberi Rute untuk Query 'Bagian Order' untuk pergi ke "Order Subgraph" 
 
 	orders {
 		id
 		total
+
+
+(3) Product Data :
+Gateway memberi Rute pada Query 'Bagian Product' untuk pergi ke "Product Subgraph"
+
+	products {
+		id
+		name
+		price
+		}
