Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -998,3 +998,6 @@ Gateway memberi Rute pada Query 'Bagian Product' untuk pergi ke "Product Subgrap
 		name
 		price
 		}
+
+(4) Unified Response :
+Gateway menggabungkan Data dari Semua Subraph, dan mengembalikkannya sebagai "Single Response" (Satu Reponse atau bisa kita sebut "Unified Response").
