--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -999,5 +999,32 @@ Gateway memberi Rute pada Query 'Bagian Product' untuk pergi ke "Product Subgrap
 		price
 		}
 
+
 (4) Unified Response :
 Gateway menggabungkan Data dari Semua Subraph, dan mengembalikkannya sebagai "Single Response" (Satu Reponse atau bisa kita sebut "Unified Response").
+
+Contoh "Unified Response" adalah seperti dibawah ini.
+Dapat kita lihat bahwa pada Unified Response, semua data dari semua Subgraph digabungkan menjadi satu Response.
+
+	{
+	  "data": {
+	    "user": {
+	      "id": 123,
+	      "name": "John Doe",
+	      "orders": [
+	        {
+	          "id": 1,
+	          "total": 100,
+	          "products": [
+	            {
+	              "id": "p1",
+	              "name": "Laptop",
+	              "price": 1000
+	            }
+	          ]
+	        }
+	      ]
+	    }
+	  }
+	}
+
