Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -990,7 +990,7 @@ Gateway memberi Rute untuk Query 'Bagian Order' untuk pergi ke "Order Subgraph"
 		total
 
 
-(3) Product Data :
+(3) Product Data :  <br/>
 Gateway memberi Rute pada Query 'Bagian Product' untuk pergi ke "Product Subgraph"
 
 	products {
@@ -1000,11 +1000,13 @@ Gateway memberi Rute pada Query 'Bagian Product' untuk pergi ke "Product Subgrap
 		}
 
 
-(4) Unified Response :
-Gateway menggabungkan Data dari Semua Subraph, dan mengembalikkannya sebagai "Single Response" (Satu Reponse atau bisa kita sebut "Unified Response").
-
-Contoh "Unified Response" adalah seperti dibawah ini.
-Dapat kita lihat bahwa pada Unified Response, semua data dari semua Subgraph digabungkan menjadi satu Response.
+ <br/>
+(4) Unified Response :  <br/>
+Gateway menggabungkan Data dari Semua Subraph, dan mengembalikkannya sebagai "Single Response" (Satu Reponse atau bisa kita sebut "Unified Response"). <br/>
+ <br/>
+Contoh "Unified Response" adalah seperti dibawah ini.  <br/>
+Dapat kita lihat bahwa pada Unified Response, semua data dari semua Subgraph digabungkan menjadi satu Response.  <br/>
+Dan "Unified Response" inilah yang akan dikirimkan ke Client.
 
 	{
 	  "data": {
