--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1030,3 +1030,13 @@ Dan "Unified Response" inilah yang akan dikirimkan ke Client.
 	  }
 	}
 
+
+  <br/>
+    <br/>
+### 2.5) Unified API
+  <br/>   <br/>
+
+  
+
+
+### 2.6) Gateway in GraphQL
