Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1034,6 +1034,10 @@ Dan "Unified Response" inilah yang akan dikirimkan ke Client.
  
 ### 2.5) Unified API
   <br/>   <br/>
+- "Unified API" adalah 'Single API' (API tunggal) yang menyediakan 'Central Access Point' (titik pusat) ke berbagai Data Source (Sumber Data) atau ke berbagai Services (Layanan). <br/>
+<br/>
+- Daripada Software harus berinteraksi dengan 'banyak API berbeda secara individual', <br/>
+"Unified API" menyatukan semua API tersebut, yang mana hal ini memungkinkan Client (seperti User atau Front-End Application) untuk mengakses semua Data & Services (Layanan) yang dibutuhkan melalui 'Satu API yang terpadu'. <br/>
 
   
 
