Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1034,6 +1034,11 @@ Dan "Unified Response" inilah yang akan dikirimkan ke Client.
  
 ### 2.5) Unified API
   <br/>   <br/>
+
+- "Unified API" menggabungkan API untuk semua layanan menjadi satu, yang mana berarti kita hanya perlu menggunakan Satu API untuk banyak layanan.
+Daripada memiliki API terpisah untuk setiap layanan (seperti satu API untuk Sistem Pembayaran, Satu API lainnya untuk Social Media, dan Satu API lagi untuk Data Storage),
+Unified API menggabungkan semua layanan tersebut menjadi satu. <br/> <br/>
+  
 - "Unified API" adalah 'Single API' (API tunggal) yang menyediakan 'Central Access Point' (titik pusat) ke berbagai Data Source (Sumber Data) atau ke berbagai Services (Layanan). <br/>
 <br/>
 - Daripada Software harus berinteraksi dengan 'banyak API berbeda secara individual', <br/>
