Update 2.3) Basics : Core Concepts.md

--- a/Hasura Documentation/2.3) Basics : Core Concepts.md
+++ b/Hasura Documentation/2.3) Basics : Core Concepts.md
@@ -1042,9 +1042,23 @@ Unified API menggabungkan semua layanan tersebut menjadi satu. <br/> <br/>
 - "Unified API" adalah 'Single API' (API tunggal) yang menyediakan 'Central Access Point' (titik pusat) ke berbagai Data Source (Sumber Data) atau ke berbagai Services (Layanan). <br/>
 <br/>
 - Daripada Software harus berinteraksi dengan 'banyak API berbeda secara individual', <br/>
-"Unified API" menyatukan semua API tersebut, yang mana hal ini memungkinkan Client (seperti User atau Front-End Application) untuk mengakses semua Data & Services (Layanan) yang dibutuhkan melalui 'Satu API yang terpadu'. <br/>
+"Unified API" menyatukan semua API tersebut, yang mana hal ini memungkinkan Client (seperti User atau Front-End Application) untuk mengakses semua Data & Services (Layanan) yang dibutuhkan melalui 'Satu API yang terpadu'. <br/> <br/>
 
-  
+
+- Key Characteristic 'Unified API' : <br/>
+(Kareteristik Utama API) <br/>
+
+(1) Single Access Point (titik akses pusat) : <br/>
+Menyediakan sebuah 'Central Point' (titik pusat) untuk mengakses berbagai Layanan atau Sumber Data. <br/> <br/>
+
+(2) Simplifies Integration : <br/>
+Client hanya perlu berinteraksi dengan 'Satu API' untuk mengakses berbagai layanan atau Sumber Data, bukan beberapa API. <br/>
+
+(3) Abstraction of Complexity : <br/>
+Menyembunyikan Kompleksitas dari berbagai Data Source atau Services, sehingga memudah Client untuk mengambil Data tanpa mengetahui dari mana data tersebut berasal. <br/>
+
+Istilahnya, pada sebuah Restaurant, 'API' itu merupakan Pelayan, 'Client' merupakan Pelanggan yang memesan makanan, dan 'Database & Services'itu seperti Dapur yang membuat makanan. <br/>
+yang mana Pelayan berperan untuk mengantarkan makanan ke pelanggan, sehingga Pelanggan tidak perlu mengetahui Kompleksitas Dapur dan Pelanggan tidak perlu mengetahui dari mana makanan tersebut berasal. <br/>
 
 
 ### 2.6) Gateway in GraphQL
